tests/snapshots/cli_help__help_energy.snap
---
source: tests/cli_help.rs
expression: stdout
---
Display energy and power status

Usage: powercfg energy [OPTIONS]

Options:
      --json
          Emit the report as JSON instead of formatted text.
          
          Wired in Phase 5; subcommand handlers ignore this until then.

  -v, --verbose
          Show additional details

  -h, --help
          Print help (see a summary with '-h')
