tests/snapshots/cli_help__help_requests.snap
---
source: tests/cli_help.rs
assertion_line: 27
expression: stdout
---
Display power requests (what's preventing sleep)

Usage: powercfg requests [OPTIONS]

Options:
      --json
          Emit the report as JSON instead of formatted text.
          
          See `docs/json-schema.md` for the per-command output shape.

  -v, --verbose
          Show additional information

  -h, --help
          Print help (see a summary with '-h')
