tests/snapshots/cli_help__help_top_level.snap
---
source: tests/cli_help.rs
expression: stdout
---
Linux power configuration utility (similar to Windows powercfg)

Usage: powercfg [OPTIONS] <COMMAND>

Commands:
  requests     Display power requests (what's preventing sleep)
  lastwake     Display information about the last wake event
  devicequery  Display devices that can wake the system
  sleepstates  Display available sleep states and configuration
  waketimers   Display scheduled wake timers
  energy       Display energy and power status
  help         Print this message or the help of the given subcommand(s)

Options:
      --json
          Emit the report as JSON instead of formatted text.
          
          Wired in Phase 5; subcommand handlers ignore this until then.

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
