tests/snapshots/cli_help__help_waketimers.snap
---
source: tests/cli_help.rs
assertion_line: 61
expression: stdout
---
Display scheduled wake timers

Usage: powercfg waketimers [OPTIONS]

Options:
      --json
          Emit the report as JSON instead of formatted text.
          
          See `docs/json-schema.md` for the per-command output shape.

  -v, --verbose
          Show all scheduled timers, not just wake-capable ones

  -h, --help
          Print help (see a summary with '-h')
